[metadata]
name = kolombo-delameter
version = 0.9.8
author = Aleksandr Shavykin
author_email = 0.delameter@gmail.com
description = CLI control characters and escape sequences viewer/visualizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/delameter/kolombo
project_urls =
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Terminals

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
