[metadata]
name = kolombo-delameter
version = 0.9.20
author = Aleksandr Shavykin
author_email = 0.delameter@gmail.com
description = CLI control characters and escape sequences viewer/visualizer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/delameter/kolombo
project_urls =
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Terminals

[options]
python_requires = >=3.7
install_requires =
    pytermor
packages = find:

[options.packages.find]
exclude =
    tests
    tests.*

[options.package_data]
* = legend.ansi

[options.entry_points]
console_scripts =
    kolombo = kolombo.__main__:main
